# NoteTurner

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 0001_initial_phase2_tables.py  0002_admins_and_financial_flag.py  0003_gdrive_vectors.py  0004_sync_cursors.py  0005_sync_jobs.py
docs/: HOLLIHOP_CRM_SYNC.md  SPEC.md
src/noteturner/: debug_runtime.py  debug_session.py  main.py  worker.py
src/noteturner/bot/: access.py  dispatcher.py  filters.py  user_resolve.py  utils.py
src/noteturner/bot/handlers/: admin.py  assistant.py  collector.py  messages.py  ping.py
src/noteturner/bot/keyboards/: admin.py
src/noteturner/bot/middlewares/: chat_access.py  inject.py
src/noteturner/config/: loader.py  prompts.yaml  routing.yaml  settings.py
src/noteturner/db/: models.py  session.py
src/noteturner/db/repositories/: admins.py  chats.py  collector.py  jobs.py  query_logs.py  sync.py  vectors.py
src/noteturner/health/: checker.py
src/noteturner/integrations/: gdrive.py  hollihop.py  openrouter.py
src/noteturner/services/: crm_sync.py  data_coverage.py  drive_sync.py  sync_jobs.py
tests/: test_access.py  test_admin_mgmt.py  test_answerer.py  test_assistant_intent.py  test_bot_utils.py  test_chat_access.py  test_crm_sync.py  test_drive_sync.py  test_filters.py  test_gdrive.py  test_google_settings.py  test_health_checker.py  test_integration_errors.py  test_prompts.py  test_retriever.py  test_router.py  test_sync_jobs.py  test_sync_queue.py  test_user_resolve.py
(+4 files in other folders)
