[project]
name = "noteturner"
version = "0.1.0"
description = "Telegram bot assistant for Virtuozes (Note Turner)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15,<4",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "httpx>=0.28,<1",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pyyaml>=6,<7",
    "pgvector>=0.3,<1",
    "google-api-python-client>=2.100,<3",
    "google-auth>=2.30,<3",
    "pypdf>=5,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noteturner"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
